# a2a-demo

EvenOrOddAgent/: README.md  agent_executor.py  main.py  pyproject.toml  requirements.txt  test_client.py
a2a_financial_agent/check_budget_agent/: README.md  agent.py  agent_executor.py  main.py  pyproject.toml
a2a_financial_agent/check_legal_agent/: README.md  agent.py  agent_executor.py  main.py
a2a_financial_agent/check_planning_agent/: README.md  agent.py  agent_executor.py  main.py  pyproject.toml
a2a_financial_agent/database/: expenses.csv
a2a_financial_agent/host_adk/: README.md  pyproject.toml
a2a_financial_agent/host_adk/host/: agent.py
